--- a/style.css
+++ b/style.css
@@ -291,9 +291,18 @@ body {
 	margin-top: 20px;
 	width: 200px;
 	height: 200px;
-	border: 1px solid aqua;
+	border: 1px solid navy;
 	border-radius: 50%;
 	box-shadow: 5px 5px 5px black;
+	/* add animation */
+	animation-name: animate;
+	animation-duration: 2s;
+	animation-delay: 0.5s;
+}
+
+@keyframes animate {
+	from {opacity: 0;}
+	to {opacity: 1;}
 }
 
 .jumbotron h4 {
