--- a/style.css
+++ b/style.css
@@ -245,7 +245,8 @@ body {
 /* navbar-top */
 
 .navbar-top {
-	position: sticky;
+	position: fixed;
+	width: 100%;
 	top: 0;
 	overflow: hidden;
 	background-color: #333;
@@ -281,19 +282,19 @@ body {
 .jumbotron {
 	overflow: auto;
 	width: 100%;
-	height: 355px;
+	height: 400px;
 	background: linear-gradient(black, DeepSkyBlue);
 }
 
 #gambar img {
 	display: grid;
 	margin: auto;
-	margin-top: 20px;
+	margin-top: 60px;
 	width: 200px;
 	height: 200px;
 	border: 1px solid navy;
 	border-radius: 50%;
-	box-shadow: 5px 5px 5px black;
+	box-shadow: 2px 2px 5px black;
 	/* add animation */
 	animation-name: animate;
 	animation-duration: 2s;
