--- a/style.css
+++ b/style.css
@@ -312,9 +312,9 @@ body {
 	margin-top: 60px;
 	width: 200px;
 	height: 200px;
-	border: 1px solid navy;
+	border: 4px solid navy;
 	border-radius: 50%;
-	box-shadow: 2px 2px 5px black;
+	box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
 	/* add animation */
 	animation-name: animate;
 	animation-duration: 2s;
