--- a/style.css
+++ b/style.css
@@ -293,6 +293,8 @@ body {
 .navbar-top a:hover {
 	background-color: #002;
 	color: white;
+	font-weight: 600;
+	text-shadow: 1px 1px 10px #eaeaea;
 }
 
 .navbar-top a#active {
