--- a/style.css
+++ b/style.css
@@ -368,8 +368,8 @@ body {
 
 .jumbotron img {
 	display: grid;
-	margin: auto;
-	margin-top: 60px;
+	margin: auto; 
+	margin-top: 50px;
 	width: 200px;
 	height: 200px;
 	border: 4px solid navy;
@@ -381,6 +381,11 @@ body {
 	animation-delay: 0.5s;
 	overflow: hidden;
 	/*z-index: 1;*/
+}
+
+#gambar {
+	position: relative;
+	top: 40px;
 }
 
 @keyframes animate {
